select menu, returns name

--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Horned Animals</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" type="text/css" href="css/base.css">
 </head>
 
 <body>
 <h1>Crown of Horns</h1>
+<select id="hornAnimalDrop">
+  <option id = "animal" alt = ""></option>
+  
+</select>
+
+
 <main>
 <section id = "hornAnimal">
   <h2></h2>
