non repeating menu and css

--- a/index.html
+++ b/index.html
@@ -8,16 +8,14 @@
     <title>Horned Animals</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/base.css">
+    <link href="https://fonts.googleapis.com/css?family=Oldenburg" rel="stylesheet">
 </head>
 
 <body>
 <h1>Crown of Horns</h1>
 <select id="hornAnimalDrop">
   <option id = "animal" alt = ""></option>
-  
 </select>
-
-
 <main>
 <section id = "hornAnimal">
   <h2></h2>
