--- a/index.html
+++ b/index.html
@@ -12,16 +12,21 @@
 </head>
 
 <body>
-<h1>Crown of Horns</h1>
-<select id="hornAnimalDrop">
-  <option id = "animal" alt = ""></option>
-</select>
+<header>
+  <h1>Crown of Horns</h1>
+  <select id="hornAnimalDrop">
+    <option id = "animal" alt = ""></option>
+  </select>
+  <button type ="button" id="page-1">page-1</button>
+  <button type ="button" id="page-2">page-2</button>
+  <p>Sort By Name</p>
+</header>
 <main>
-<section id = "hornAnimal">
-  <h2></h2>
+  <section id = "hornAnimal">
+    <h2></h2>
     <img src= "" alt= "">
-  <p></p>
-</section>
+    <p></p>
+  </section>
 </main>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="js/app.js" type="text/javascript" ></script>
