--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
   <button type ="button" id="page-1">page-1</button>
   <button type ="button" id="page-2">page-2</button>
   <p>Sort By Name</p>
+  <h3>Sort by Horns</h3>
 </header>
+<section id = "hornAnimal">
+  <h2></h2>
+  <img src= "" alt= "">
+  <p></p>
+</section>
 <main>
-  <section id = "hornAnimal">
-    <h2></h2>
-    <img src= "" alt= "">
-    <p></p>
-  </section>
+  
 </main>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="js/app.js" type="text/javascript" ></script>
