--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/base.css">
     <link href="https://fonts.googleapis.com/css?family=Oldenburg" rel="stylesheet">
-</head>
+    <script id="horn-template" type="text/x-handlebars-template">
+      <section class = "{{ keyword }}" id = "{{ horns }}">
+        <h2 id = "{{ horns }}">{{ title }}</h2>
+        <img src= "{{ image_url }}" alt= "{{ description }}" id = "{{title}}">
+        <p></p>
+      </section>
+    </script>
+    <script id="drop-template" type="text/x-handlebars-template"> 
+    <select>
+      <option id = "{{keyword}}" alt = "">{{keyword}}</option>
+    </select>
+    </script>
+
+
+
+
+  </head>
 
 <body>
 <header>
@@ -22,15 +38,13 @@
   <p>Sort By Name</p>
   <h3>Sort by Horns</h3>
 </header>
-<section id = "hornAnimal">
-  <h2></h2>
-  <img src= "" alt= "">
-  <p></p>
-</section>
+
 <main>
-  
 </main>
+
+
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src = "//cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.1/handlebars.min.js"></script>
 <script src="js/app.js" type="text/javascript" ></script>
 </body>
 </html>
