--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <section class = "{{ keyword }}" id = "{{ horns }}">
         <h2 id = "{{ horns }}">{{ title }}</h2>
         <img src= "{{ image_url }}" alt= "{{ description }}" id = "{{title}}">
-        <p></p>
+        <p>{{ description }}</p>
       </section>
     </script>
 
@@ -52,7 +52,6 @@
   </nav>
 
 <main>
-  <section id="animals" class="deck"></section>
 </main>
 
 <!-- Script sources -->
